@@ -1,3 +1,7 @@
+* 2013-12-09 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 29729: Skip filestorage deletion if bucket no longer exists 
+  
 * 2013-12-06 - thorben.betten@open-xchange.com
 
  - Fix for bug 30190: Fixed parsing of CLI call
